[tool.poetry]
name = "assault"
version = "0.1.0"
description = "load testing cli"
authors = ["Joben R <joben.rara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
